# enkiTS

enkiTS_android/: settings.gradle
enkiTS_android/app/: CMakeLists.txt  build.gradle
enkiTS_android/app/src/main/: AndroidManifest.xml
enkiTS_android/app/src/main/cpp/modules/LogModule/: log_module.cpp
enkiTS_android/app/src/main/cpp/sample/: CompletionAction.cpp  main_jni.cpp
enkiTS_android/app/src/main/cpp/system_wrappers/interface/: trace.h
enkiTS_android/app/src/main/java/com/heaven7/android/enkits/: MainActivity.java
enkiTS_android/app/src/main/res/layout/: activity_main.xml
enkiTS_android/app/src/main/res/values/: strings.xml
enkiTS_android/gradle/wrapper/: gradle-wrapper.properties
